; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_out_newpointer_caps.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_rdp.c_rdp_out_newpointer_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_CAPSET_POINTER = common dso_local global i32 0, align 4
@RDP_CAPLEN_NEWPOINTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rdp_out_newpointer_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rdp_out_newpointer_caps(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @RDP_CAPSET_POINTER, align 4
  %5 = call i32 @out_uint16_le(i32 %3, i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @RDP_CAPLEN_NEWPOINTER, align 4
  %8 = call i32 @out_uint16_le(i32 %6, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @out_uint16_le(i32 %9, i32 1)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @out_uint16_le(i32 %11, i32 20)
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @out_uint16_le(i32 %13, i32 20)
  ret void
}

declare dso_local i32 @out_uint16_le(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
